Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-40030

[FTS Collections] Index build issues with multi-collection index

    XMLWordPrintable

Details

    Description

      Build : 7.0.0-2302

      Setup :
      3 node cluster = kv+fts , kv+fts+n1ql , kv+fts+n1ql

      Steps to reproduce =
      1. Create a bucket 'bucket.com'
      2. Create 2 scopes in this bucket = scope1 and scope2
      3. For scope1, create 2 collections = s1c1 and s1c2
      4. For scope2, create 3 collections = s2c1, s2c2, s3c3
      5. Load 10000 docs in each of these collections
      6. Create FTS index s2c1idx on collection scope2.s2c1. Ensure that the index has 10000 docs indexed
      7. Edit the FTS index s2c1idx to also index scope2.s2c2. Index should have 20000 docs now
      8. Create an empty collection s2c5 on scope2
      9. Edit the FTS index s2c1idx to also index scope2.s2c5. Index should be rebuilt

      Expectation : Index should be rebuilt and should have 20000 docs.
      Actual : Index building is stuck at 37.62% with 16960 docs

      Attachments

        1. dcp.go
          6 kB
        2. main.py
          2 kB
        3. Screenshot 2020-07-29 at 3.15.01 PM.png
          Screenshot 2020-07-29 at 3.15.01 PM.png
          152 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhinav Abhi Dangeti
              mihir.kamdar Mihir Kamdar (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty